--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "convert-array-to-csv": "^2.0.0",
     "google-spreadsheet": "^3.1.15",
+    "number-to-words": "^1.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
@@ -17,6 +18,7 @@
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.16",
     "styled-components": "^5.2.3",
     "tiny-tfidf-node": "0.0.1",
     "web-vitals": "^1.1.1"
