--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "convert-array-to-csv": "^2.0.0",
+    "firebase": "^8.6.1",
     "google-spreadsheet": "^3.1.15",
     "number-to-words": "^1.2.4",
     "react": "^17.0.2",
